<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_wallpaper2"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient_img"
        android:contentDescription="@string/bg_degrade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="41dp"
        android:layout_height="31dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/icon_mustache"
        android:src="@drawable/img_much1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_locale_recife"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginBottom="137dp"
        android:background="@drawable/bg_one_button"
        android:fontFamily="@font/alata"
        android:text="@string/recife"
        android:textAlignment="center"
        android:textColor="@color/color6"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_locale_caruaru"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginBottom="67dp"
        android:background="@drawable/bg_transp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/alata"
        android:text="@string/caruaru"
        android:textAlignment="center"
        android:textColor="@color/color6"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="211dp"
        android:fontFamily="@font/alata"
        android:text="@string/hey"
        android:textAlignment="center"
        android:textColor="@color/color6"
        android:textSize="15sp"
        android:shadowRadius="4"
        android:shadowColor="#D87E40"
        android:shadowDx="0"
        android:shadowDy="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="185dp"
        android:layout_height="145dp"
        android:layout_marginVertical="60dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_logo6" />


</androidx.constraintlayout.widget.ConstraintLayout>