<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color3"
    tools:context=".AgendarHorario">


    <View
        android:id="@+id/header4"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/bg_header4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/header3"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginBottom="180dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/header5"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/bg_header3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/bg_shadow"
        android:ems="10"
        android:hint="@string/insira_seu_nome"
        android:inputType="textPersonName"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/color5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/alata"
        android:text="@string/txt_titulo_view_agendamento"
        android:textAlignment="center"
        android:textColor="@color/color4"
        android:textSize="20sp"
        android:textStyle="bold"
        android:shadowRadius="3"
        android:shadowColor="#F13000"
        android:shadowDx="0"
        android:shadowDy="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/alata"
        android:text="@string/txt_subtitulo_view_agendamento"
        android:textColor="@color/color2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:shadowRadius="3"
        android:shadowColor="#F13000"
        android:shadowDx="0"
        android:shadowDy="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/perfil_barbeiro"
        android:layout_width="111dp"
        android:layout_height="106dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/img_barbeiro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/ic_person" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/view2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_button_back_transp"
        android:drawableStart="@drawable/ic_back"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/oi"
        android:textSize="0.1sp"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:paddingHorizontal="10dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp"
        />

    <Spinner
        android:id="@+id/marcacao_data_horario"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_spinner"
        android:contentDescription="@string/spinner_data_hora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perfil_barbeiro" />

    <CheckBox
        android:id="@+id/corte_maquina"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="19dp"
        android:background="@drawable/checkbox_background_selector"
        android:button="@android:color/transparent"
        android:text="@string/option_agendar_corte_maquina"
        android:textAlignment="center"
        android:textColor="@color/option_text_selector"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/corte_tesoura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marcacao_data_horario" />

    <CheckBox
        android:id="@+id/corte_tesoura"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/checkbox_background_selector"
        android:button="@android:color/transparent"
        android:text="@string/option_agendar_corte_tesoura"
        android:textAlignment="center"
        android:textColor="@color/option_text_selector"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marcacao_data_horario" />

    <CheckBox
        android:id="@+id/corte_sobrancelha"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="19dp"
        android:background="@drawable/checkbox_background_selector"
        android:button="@android:color/transparent"
        android:text="@string/option_agendar_corte_sobrancelha"
        android:textAlignment="center"
        android:textColor="@color/option_text_selector"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/corte_barba"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/corte_maquina" />

    <CheckBox
        android:id="@+id/corte_barba"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/checkbox_background_selector"
        android:button="@android:color/transparent"
        android:text="@string/option_agendar_corte_barba"
        android:textAlignment="center"
        android:textColor="@color/option_text_selector"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/corte_tesoura" />

    <TextView
        android:id="@+id/valorTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/color2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/header4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>