<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color3"
    tools:context=".Relatorio">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="127dp"
        android:text="@string/relatorio"
        android:textSize="35sp"
        android:fontFamily="@font/alata"
        android:textStyle="bold"
        android:textColor="@color/color4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="67dp"
        android:layout_height="54dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="45dp"
        android:src="@drawable/ic_relatorio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/relatorio" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_relatorio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_capturar"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginBottom="38dp"
        android:background="@drawable/bg_shadow"
        android:paddingHorizontal="16dp"
        android:text="@string/capturar"
        android:textAlignment="center"
        android:textColor="@color/color3"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/nomebarbeiro_relatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="35dp"
        android:text="@string/nome_do_barbeiro"
        android:fontFamily="@font/alata"
        android:textColor="@color/color3"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/nomebarbeiro_sv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:layout_marginStart="115dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:text="teste teste"
        android:textColor="@color/color4"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nomecliente_relatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginStart="35dp"
        android:text="@string/nome_do_cliente"
        android:fontFamily="@font/alata"
        android:textColor="@color/color3"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nomebarbeiro_relatorio" />

    <TextView
        android:id="@+id/nomecliente_sv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginStart="115dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:text="teste teste"
        android:textColor="@color/color4"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/nomebarbeiro_sv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/data_relatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginStart="32dp"
        android:text="@string/data_horario"
        android:fontFamily="@font/alata"
        android:textColor="@color/color3"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nomecliente_relatorio" />

    <TextView
        android:id="@+id/procedimentos_relatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginStart="33dp"
        android:text="@string/procedimentos"
        android:fontFamily="@font/alata"
        android:textColor="@color/color3"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/data_relatorio" />

    <TextView
        android:id="@+id/valor_relatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:layout_marginStart="29dp"
        android:text="@string/valor_total"
        android:fontFamily="@font/alata"
        android:textColor="@color/color3"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/procedimentos_relatorio" />

    <TextView
        android:id="@+id/obs_relatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="45dp"
        android:paddingEnd="45dp"
        android:layout_marginBottom="90dp"
        android:textAlignment="center"
        android:text="@string/obs_relatorio"
        android:fontFamily="@font/alata"
        android:textColor="@color/color3"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/view" />

    <ImageView
        android:id="@+id/image_barbeirorelatorio"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="137dp"
        android:layout_marginTop="93dp"
        android:src="@drawable/img_barbeiro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        android:contentDescription="@string/barbeiro_relatorio" />

    <ImageView
        android:id="@+id/image_cliente"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="155dp"
        android:layout_marginTop="42dp"
        android:src="@drawable/ic_cliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_barbeirorelatorio"
        android:contentDescription="@string/barbeiro_relatorio" />

    <ImageView
        android:id="@+id/image_data"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginEnd="141dp"
        android:layout_marginTop="46dp"
        android:src="@drawable/ic_horario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_cliente"
        android:contentDescription="@string/barbeiro_relatorio" />

    <ImageView
        android:id="@+id/image_procedimentos"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginEnd="141dp"
        android:layout_marginTop="46dp"
        android:src="@drawable/ic_procedimentos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_data"
        android:contentDescription="@string/barbeiro_relatorio" />

    <ImageView
        android:id="@+id/image_valor"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginEnd="115dp"
        android:layout_marginTop="104dp"
        android:src="@drawable/ic_valor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_procedimentos"
        android:contentDescription="@string/barbeiro_relatorio" />


</androidx.constraintlayout.widget.ConstraintLayout>