<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color3"
    tools:context="com.barbearia.EscolhaBarbeiros">

    <View
        android:id="@+id/header1"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/RecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewRecycler"
        android:layout_width="match_parent"
        android:layout_height="584dp"
        android:background="@drawable/bg_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="334dp"
        android:layout_height="491dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="19dp"
        android:background="@drawable/bg_recycler"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header1"
        tools:visibility="visible" />

    <View
        android:id="@+id/header2"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/bg_header2"
        app:layout_constraintTop_toBottomOf="@id/RecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/alata"
        android:text="@string/escolha_o_barbeiro"
        android:textColor="@color/color4"
        android:textSize="17sp"
        android:textStyle="bold"
        android:shadowRadius="3"
        android:shadowColor="#F13000"
        android:shadowDx="0"
        android:shadowDy="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/alata"
        android:text="@string/disponibilidade"
        android:textColor="@color/color4"
        android:textSize="17sp"
        android:textStyle="bold"
        android:shadowRadius="3"
        android:shadowColor="#F13000"
        android:shadowDx="0"
        android:shadowDy="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/viewRecycler" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="67dp"
        android:layout_height="54dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/barbeiro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_barbeiro"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button_back"
        android:drawableStart="@drawable/ic_back"
        android:text="@string/btn_back"
        android:textSize="0.1sp"
        android:textAlignment="textStart"
        android:textColor="@color/color3"
        android:paddingHorizontal="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/alata"
        android:text="@string/barbeiros"
        android:textAlignment="center"
        android:textColor="@color/color3"
        android:textSize="19sp"
        android:textStyle="bold"
        android:shadowRadius="1"
        android:shadowColor="@color/color3"
        android:shadowDx="0"
        android:shadowDy="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewRecycler" />



</androidx.constraintlayout.widget.ConstraintLayout>